# dual_ad

./: .clang-tidy  CMakeLists.txt  README.md
src/: dual.cc  dual.hpp
test/: test_ad.cc
